# modelrisk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: mkdocs.yml
examples/: scenarios.yaml  usage_example.py
modelrisk/: __init__.py
modelrisk/credit/: __init__.py  base_pd.py  lgd.py  pd.py  scenario_manager.py  scorecard.py
modelrisk/credit/ifrs9/: __init__.py  ecl.py  forward_pd.py  lifetime_pd.py  macro_overlay.py  pit_pd.py  staging.py
modelrisk/credit/irb/: __init__.py  capital.py  dr_mapping.py  pit_to_ttc.py  smoothing.py  ttc_pd.py  validation.py
modelrisk/evaluation/: __init__.py  calibration.py  classification.py  explainability.py  regression.py
modelrisk/market/: __init__.py  cvar.py  var.py  volatility.py
modelrisk/operational/: __init__.py  evt.py  lda.py  scenarios.py
modelrisk/utils/: __init__.py  distributions.py  plotting.py  simulation.py
tests/: conftest.py
tests/__pycache__/: conftest.cpython-313-pytest-9.0.2.pyc.11964
tests/credit/: test_credit.py  test_ifrs9.py  test_irb_and_scenarios.py
tests/evaluation/: test_evaluation.py
tests/market/: test_market.py
tests/operational/: test_operational.py
