[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelrisk"
version = "0.1.0"
description = "A Python library for credit, market, and operational risk modelling with model evaluation."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "modelRisk Contributors" }]
keywords = ["risk", "credit risk", "market risk", "operational risk", "VaR", "model evaluation", "SHAP", "LIME"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "scikit-learn>=1.1",
    "xgboost>=1.7",
]

[project.optional-dependencies]
explainability = [
    "shap>=0.42",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
all = ["modelrisk[explainability,dev]"]

[project.urls]
Homepage = "https://github.com/yourusername/modelRisk"
Repository = "https://github.com/yourusername/modelRisk"
Issues = "https://github.com/yourusername/modelRisk/issues"
Documentation = "https://yourusername.github.io/modelRisk"

[tool.hatch.build.targets.wheel]
packages = ["modelrisk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=modelrisk --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
